--- a/css/estilos.css
+++ b/css/estilos.css
@@ -191,8 +191,9 @@ footer{
 }
 
 .divImgCarousel{
-    width: 100vh;
-    height: 100vh;
+    width: 70vh;
+    height: 70vh;
+    padding-left: 70px;
 }
 
 .divImgCarousel img{
@@ -234,7 +235,7 @@ footer{
 
 .divIcon a i{
     color: white;
-    font-size: 4rem;
+    font-size: 2rem;
     background-color: gray;
     padding: 10px;
     border: 3px solid gray;
